# hexlet-flask-example

./: .gitignore  Makefile  README.md  pyproject.toml
hexlet_flask_example/: example.py  example_form.py  example_handler.py  example_routes.py  repository.py  user_cookies.py  validator.py
hexlet_flask_example/templates/: index.html  layout.html  show.html
hexlet_flask_example/templates/courses/: courses_db.json  index.html  show.html
hexlet_flask_example/templates/users/: edit.html  index.html  new.html  show.html  user_db
